--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^6.4.7",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.3",
+    "@tanstack/react-query": "^5.72.2",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
